--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@
     color: #fff;
 }
 
+.top-bar button i{
+    font-size: 30px;
+    color: #fff;
+}
+
 .top-bar h2{
     font-size: 20px;
     padding: 15px 0 0 0;
@@ -43,7 +48,6 @@
     width: 311px;
     height: 311px;
     border-radius: 50%;
-    border: 2px solid #ad9b8d;
     margin: 0 auto;
     margin-top: 40px;
 }
