--- a/css/style.css
+++ b/css/style.css
@@ -5,74 +5,94 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 
 /* Configuraciones generales */
-*{
-    font-family: "Montserrat", sans-serif;
+* {
+  font-family: "Montserrat", sans-serif;
 }
 
-.app{
-    width: 430px;
-    height: 932px;
-    background: linear-gradient(#AD9B8D, #09080E);
-    margin: 0 auto;
-    border-radius: 30px;
-    padding: 80px 40px 40px 40px;
+:root {
+  --fondo-caratula: url();
 }
 
-.app .top-bar{
-    justify-content: space-between;
-    display: flex;
+.app {
+  width: 430px;
+  height: 932px;
+  background: linear-gradient(#AD9B8D, #09080E);
+  margin: 0 auto;
+  border-radius: 30px;
+  padding: 80px 40px 40px 40px;
 }
 
-.app .top-bar button{
-    width: 53px;
-    height: 57px;
-    border-radius: 50%;
-    background: #0000003a;
-    border: none;
-    color: #fff;
+.app .top-bar {
+  justify-content: space-between;
+  display: flex;
 }
 
-.top-bar button i{
-    font-size: 30px;
-    color: #fff;
+.app .top-bar a{
+  width: 53px;
+  height: 57px;
+  border-radius: 50%;
+  background: #0000003a;
+  border: none;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.top-bar h2{
-    font-size: 20px;
-    padding: 15px 0 0 0;
-    color: #fff;
-
+.app .top-bar button {
+  width: 53px;
+  height: 57px;
+  border-radius: 50%;
+  background: #0000003a;
+  border: none;
+  color: #fff;
 }
 
-.app .cont-foto{
-    width: 311px;
-    height: 311px;
-    border-radius: 50%;
-    margin: 0 auto;
-    margin-top: 40px;
+.top-bar a i{
+  font-size: 33px;
+  color: #fff;
 }
 
-.app .cont-foto img{
-    background-size: 100%;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-repeat: no-repeat;
+.top-bar button i {
+  font-size: 23px;
+  color: #fff;
 }
 
-.app .titulo-cancion{
-    text-align: center;
-    padding: 40px 0 0 0;
-    font-weight: 400;
-    color: #fff;
-    font-size: 30px;
+.top-bar h2 {
+  font-size: 20px;
+  padding: 15px 0 0 0;
+  color: #fff;
 }
 
-.app h3{
-    text-align: center;
-    font-size: 20px;
-    font-weight: 400;
-    color: #fff;
+.app .cont-foto {
+  width: 311px;
+  height: 311px;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-top: 40px;
+}
+
+.app .cont-foto img {
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+}
+
+.app .titulo-cancion {
+  text-align: center;
+  padding: 40px 0 0 0;
+  font-weight: 400;
+  color: #fff;
+  font-size: 30px;
+}
+
+.app h3 {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  color: #fff;
 }
 
 .progress-container {
@@ -83,11 +103,12 @@
 
 /* Línea del fondo */
 .progress-bar {
-  -webkit-appearance: none; /* quita el estilo por defecto */
+  -webkit-appearance: none;
+  /* quita el estilo por defecto */
   appearance: none;
   width: 100%;
-  height: 3px; 
-  background: #39383F; 
+  height: 3px;
+  background: #39383F;
   outline: none;
   overflow: visible;
 }
@@ -95,7 +116,7 @@
 /* Línea que ya ha sido “reproducida” */
 .progress-bar::-webkit-slider-runnable-track {
   height: 4px;
-  background: linear-gradient(to right, #c4da47 var(--value, 25%), #333 0%);
+  background: linear-gradient(to right, #c4da47 var(--value), #333 0%);
 }
 
 /* Bolita del slider */
@@ -104,49 +125,198 @@
   appearance: none;
   width: 16px;
   height: 16px;
-  background: #c7d24b; 
+  background: #c7d24b;
   border-radius: 50%;
   cursor: pointer;
-  margin-top: -6px; 
+  margin-top: -6px;
 }
 
-.app .minutos{
-    display: flex;
-    justify-content: space-between;
+.app .minutos {
+  display: flex;
+  justify-content: space-between;
 }
 
-.app .minutos p{
-    color: #fff;
-    font-size: 14px;
+.app .minutos p {
+  color: #fff;
+  font-size: 14px;
 }
 
-.app .botones{
-    display: flex;
-    justify-content: space-between;
+.app .botones {
+  display: flex;
+  justify-content: space-between;
 }
 
-.app .botones .btn1{
-    border: none;
-    font-size: 25px;
-    background: transparent;
-    color: #fff;
+.app .botones .btn1 {
+  border: none;
+  font-size: 25px;
+  background: transparent;
+  color: #fff;
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
 }
 
-.app .botones .btn2{
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    background: #1c1b29;
-    color: #fff;
-    font-size: 25px;
-    border: none;
+.app .botones .btn2 {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: #1c1b29;
+  color: #fff;
+  font-size: 25px;
+  border: none;
 }
 
-.app .botones .btn3{
-    width: 53px;
-    height: 53px;
-    border-radius: 50%;
-    border: none;
-    background: #c4da47;
-    font-size: 35px;
+.app .botones .btn3 {
+  width: 53px;
+  height: 53px;
+  border-radius: 50%;
+  border: none;
+  background: #c4da47;
+  font-size: 35px;
+}
+
+/* === Fondo difuminado sutil arriba y degradado oscuro abajo === */
+.app {
+  position: relative;
+  overflow: hidden;
+}
+
+/* Fondo con leve blur solo arriba */
+.app::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: var(--fondo-caratula) no-repeat center center/cover; 
+  filter: blur(10px) brightness(0.6);
+  transform: scale(1.1);
+  z-index: 0;
+  border-radius: 30px;
+}
+
+/* Degradado negro que cubre desde la mitad hacia abajo */
+.app::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 30%, #000 100%);
+  z-index: 0;
+  border-radius: 30px;
+}
+
+/* Todo el contenido va encima */
+.app * {
+  position: relative;
+  z-index: 1;
+}
+
+.cont-lista {
+  width: 430px;
+  height: 932px;
+  background: #09080E;
+  margin: 0 auto;
+  border-radius: 30px;
+  padding: 80px 40px 40px 40px;
+  flex-direction: column;
+  overflow: hidden;
+  top: 0px;
+  position: absolute;
+  right: -510px;
+  transition: .5s;
+}
+
+.lista-visible {
+  right: 0;
+  z-index: 1;
+  transition: .5s;
+
+}
+
+.cont-lista .top-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cont-canciones {
+  flex: 1;
+  max-height: 100%;
+  overflow: auto;
+}
+
+.cont-canciones::-webkit-scrollbar {
+  width: 6px;
+}
+
+.cont-canciones::-webkit-scrollbar-thumb {
+  background: #1c1b29;
+  border-radius: 10px;
+}
+
+.cont-canciones::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.cont-lista .top-bar button {
+  width: 53px;
+  height: 53px;
+  border-radius: 50%;
+  background: #0000003a;
+  border: none;
+}
+
+.fila {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.fila .cont-img {
+  width: 70px;
+  height: 70px;
+  border-radius: 20px;
+}
+
+.fila .cont-img img {
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  background-repeat: no-repeat;
+}
+
+.fila .cont-info h3 {
+  font-size: 17px;
+  color: #fff;
+  margin: 0px 0px 9px 0px;
+  text-align: start;
+
+}
+
+.fila .cont-info h4 {
+  color: #fff;
+  font-size: 15px;
+  margin: 0px;
+}
+
+.fila button {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: #1c1b29;
+  color: #fff;
+  font-size: 25px;
+  border: none;
+  margin-top: 10px;
+}
+
+
+.active {
+  background-color: #c4da47 !important;
+  border-radius: 50%;
+  border: none;
+  color: #000 !important;
+}
+
+.fila .cont-info {
+  padding: 0 20px 0 20px;
+  width: 220px;
 }
